--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -175,3 +175,39 @@ li a:hover {
   margin-left:auto;
   margin-right:auto;
 }
+
+
+/* BEGIN API SEARCH DROPDOWN */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    position: absolute;
+    background-color: white;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    width:100%
+}
+
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1
+}
+
+#apiSearchBox{
+  width:100%;
+  border: 1px solid black;
+  border-radius:3px;
+  height:30px;
+}
+/* END API SEARCH DROPDOWN */
