--- a/server/public/views/templates/testing.html
+++ b/server/public/views/templates/testing.html
@@ -1,3 +1,5 @@
+<div ng-include="'views/partials/nav.html'"></div>
+
 <div class="dropdown" style="margin-left:100px;margin-top:40px; width:300px">
   <div>
     <input id="apiSearchBox" type="text" ng-keyup="tc.instantSearch(apiSearchText)" placeholder="Search me" ng-model="apiSearchText">
@@ -9,53 +11,94 @@
       <div ng-cloak>
         <md-content>
           <md-tabs md-dynamic-height md-border-bottom>
-            <md-tab label="one">
+
+            <md-tab label="All">
               <md-content class="md-padding">
-                <h1 class="md-display-2">Tab One</h1>
-                <p ng-repeat="food in tc.instantData.branded">
-                  {{food.food_name}}
-                </p>
+                <h6>COMMON FOODS</h6>
+                  <div ng-repeat="food in tc.instantData.common | limitTo: 5" ng-click="tc.selectCommon(food)" class="dropdown-item common-item" layout="row" layout-align="start center">
+                    <!-- <div style="height:30px;width:40px;background-color:blue;display:inline-block;margin:5px"></div> -->
+                    <img src="{{food.photo.thumb}}" alt="">
+                    <div class="">
+                      {{food.food_name}}
+                    </div>
+                  </div>
+                <h6>BRANDED FOODS</h6>
+                  <div ng-repeat="food in tc.instantData.branded | limitTo: 5" ng-click="tc.selectBranded(food)" class="dropdown-item branded-item" layout="row" layout-align="start center">
+                    <!-- <div style="height:30px;width:40px;background-color:blue;display:inline-block;margin:5px"></div> -->
+                    <img src="{{food.photo.thumb}}" alt="">
+                    <div flex layout="column">
+                      <div class="">
+                        {{food.food_name}}
+                      </div>
+                      <div class="" style="font-style:italic">
+                        {{food.brand_name}}, {{food.serving_qty}}{{food.serving_unit}}
+                      </div>
+                    </div>
+                    <div class="" layout="column" layout="center end">
+                      <div class="">
+                        {{food.nf_calories | number:0}}
+                      </div>
+                      <div class="">
+                        cal
+                      </div>
+                    </div>
+
+                  </div>
               </md-content>
             </md-tab>
-            <md-tab label="two">
+
+            <md-tab label="Common">
               <md-content class="md-padding">
-                <h1 class="md-display-2">Tab Two</h1>
+                <h3>COMMON FOODS</h3>
+                <div ng-repeat="food in tc.instantData.common | limitTo: 10" ng-click="tc.selectCommon(food)" class="dropdown-item common-item" layout="row" layout-align="start center">
+                  <!-- <div style="height:30px;width:40px;background-color:blue;display:inline-block;margin:5px"></div> -->
+                  <img src="{{food.photo.thumb}}" alt="">
+                  <div class="">
+                    {{food.food_name}}
+                  </div>
+                </div>
               </md-content>
             </md-tab>
-            <md-tab label="three">
+
+            <md-tab label="Branded">
               <md-content class="md-padding">
-                <h1 class="md-display-2">Tab Three</h1>
+                <h3>BRANDED FOODS</h3>
+                <div ng-repeat="food in tc.instantData.branded | limitTo: 10" ng-click="tc.selectBranded(food)" class="dropdown-item branded-item" layout="row" layout-align="start center">
+                  <!-- <div style="height:30px;width:40px;background-color:blue;display:inline-block;margin:5px"></div> -->
+                  <img src="{{food.photo.thumb}}" alt="">
+                  <div flex layout="column">
+                    <div class="">
+                      {{food.food_name}}
+                    </div>
+                    <div class="" style="font-style:italic">
+                      {{food.brand_name}}, {{food.serving_qty}}{{food.serving_unit}}
+                    </div>
+                  </div>
+                  <div class="" layout="column" layout="center end">
+                    <div class="">
+                      {{food.nf_calories | number:0}}
+                    </div>
+                    <div class="">
+                      cal
+                    </div>
+                  </div>
+
+                </div>
               </md-content>
             </md-tab>
+
           </md-tabs>
         </md-content>
       </div>
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
     </div>
 
 </div>
 
-<div style="min-height:200px;background-color:yellow;text-align:center">
-  <span ng-show="(tc.instantData.branded.length > 0) || (tc.instantData.common.length > 0)">WE HAVE DATA</span>
-</div>
-<div class="">
-  <label for="">INSTANT QUERY</label>
-  <input type="text" name="queryValuesInstant" id="instantQuery" ng-model="instantQuery">
-  <!-- <label for="">URL</label>
-  <input type="text" name="apiInput" id="url" value=""> -->
-  <button type="button" name="button" ng-click="tc.instantSearch(instantQuery)">GO</button>
-  <br><br>
-  <label for="">COMMON QUERY (food_name)</label>
-  <input type="text" name="queryValuesCommon" id="commonQuery" ng-model="commonQuery">
-  <!-- <label for="">URL</label>
-  <input type="text" name="apiInput" id="url" value=""> -->
-  <button type="button" name="button" ng-click="tc.testCommon(commonQuery)">GO</button>
-  <br><br>
-  <label for="">BRANDED QUERY (nix_item_id)</label>
-  <input type="text" name="queryValuesBranded" id="brandedQuery" ng-model="brandedQuery">
-  <!-- <label for="">URL</label>
-  <input type="text" name="apiInput" id="url" value=""> -->
-  <button type="button" name="button" ng-click="tc.testBranded(brandedQuery)">GO</button>
-</div>
+<!-- <div class="dropdown-content">
+  <ul>
+    <li>Coffee</li>
+    <li>Tea</li>
+    <li>Milk</li>
+  </ul>
+
+</div> -->
