--- a/server/public/views/partials/addFromFavorites.html
+++ b/server/public/views/partials/addFromFavorites.html
@@ -33,7 +33,7 @@
       <span flex></span>
       <md-button class="md-raised md-primary" type="button" name="button" ng-click="cancel()">Cancel</md-button>
 
-      <md-button class="md-raised md-primary" type="button" name="button" ng-click="addEntry(favObject)">Add</md-button>
+      <md-button class="md-raised md-primary" type="button" name="button" ng-click="addEntry(favObject, true)">Add</md-button>
 
     </md-dialog-actions>
   </form>
