--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -199,33 +199,34 @@ body, html {
 } */
 
 .dropdown-content img{
-    max-width: 40px;
+    max-width: 35px;
     margin: 5px;
 }
 
 .dropdown-content h6 {
-
     border-bottom: 1px solid black;
     margin:5px;
     padding:5px;
 }
 .dropdown-item {
-
   border-bottom:1px solid grey;
-  padding:5px;
-
+    height:45px;
+  padding:3px;
 }
 
 .dropdown-item:hover {
-  background-color: #f1f1f1
+  background-color: #f1f1f1;
+  cursor: pointer;
 }
 
 .common-item {
-font-size: 18px;
+  font-size: 18px;
+
 }
 
 .branded-item {
   font-size: 12px;
+
 }
 
 #apiSearchBox{
