--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -4,21 +4,21 @@
     <h2>Fit-Tracker</h2>
   </div>
 
-  <div layout="column" flex>
-    <div layout="row" flex="40" layout-align="end start">
-      <md-button class="md-raised"ng-click="uc.userService.logout()">Log Out</md-button>
-    </div>
 
-    <div layout="row" flex="60" layout-align="start end">
-      <div>
+
+
+    <div>
       <ul>
         <li><a href="#/user">User Home</a></li>
         <li><a href="#/meals">MealTracking</a></li>
         <li><a href="#/goals">Goals</a></li>
         <li><a href="#/testing">TESTING</a></li>
       </ul>
-      </div>
     </div>
 
-  </div>
+
+    <div flex></div>
+    <div>
+      <md-button class="md-raised"ng-click="uc.userService.logout()">Log Out</md-button>
+    </div>
 </div>
