--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -11,6 +11,7 @@
       <ul>
         <li><a href="#/user">User Home</a></li>
         <li><a href="#/meals">MealTracking</a></li>
+        <li><a href="#/history">History</a></li>
         <li><a href="#/goals">Goals</a></li>
         <li><a href="#/testing">TESTING</a></li>
       </ul>
